# ComputerNetworkLabs

./: CMakeLists.txt  README.md
lab1/: README.md  proxy.c  proxy.h
lab2/: README.md  client.c  client.h  common.c  common.h  file_client.c  main_client.c  main_server.c  peer.c  server.c  server.h
lab3/: README.md  recv_send.cpp  redirect.cpp
